# lite6_enrico

./: .setup_assistant  CMakeLists.txt  README.md  notes.txt  package.xml
CreditCard_Dataset/: README.dataset.txt  README.roboflow.txt
CreditCard_Dataset/test/: 10_png_jpg.rf.07c04f446b101e8eb6489fda849353fb.txt  60_jpg.rf.8398c868a19d64af62a4d2f85e98b3a7.txt  (+51 more)
config/: UF_ROBOT.ros2_control.xacro  UF_ROBOT.srdf  UF_ROBOT.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
launch/: demo.launch.py  frames_2024-06-11_11.56.32.gv  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
notebooks/: Robot_state_model.ipynb  enrico_moveit_with_gripper.ipynb  motion_planning_api.ipynb  moveit_notebook_tutorial.ipynb  pose_controlled.ipynb
old_scripts/: PID_client.py  broadcaster.py  move_desired_direction.py  move_joint_positions.py  pickandplace_test.py
scripts/: boh  control.py  control_client.py  control_client_card.py  control_logic.py  control_server.py  control_server_card.py  get_joint_torque.py  locked_movement.py  move_around.py  move_joint_positions.py  plot.py  pos_movement.py  realsense_camera.py  storing_configurations_area.py  tree.txt
test/: pick_card_test.py
vision/: camera_manager_node.py  card_edge_detection.py  center_frame_depth.py  old_camera_manager_node.py  squared_filtered_det_onnx.py  template_matching.py  vision.py
(+1096 files in other folders)
